# DCSBinder

./: .commitmsg.tmp  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: ci.yml
crates/dcsbinder-cli/: Cargo.toml
crates/dcsbinder-cli/src/: main.rs
crates/dcsbinder-core/: Cargo.toml
crates/dcsbinder-core/src/: lib.rs
crates/dcsbinder-core/src/config/: mod.rs
crates/dcsbinder-core/src/conflict/: mod.rs
crates/dcsbinder-core/src/device/: enumerator.rs  guid.rs  mod.rs
crates/dcsbinder-core/src/history/: mod.rs
crates/dcsbinder-core/src/parser/: mod.rs  reader.rs  types.rs  writer.rs
crates/dcsbinder-core/src/remap/: execute.rs  hash.rs  mod.rs  plan.rs  recover.rs  types.rs
crates/dcsbinder-core/src/scanner/: mod.rs
crates/dcsbinder-core/tests/: live_correlation.rs  remap.rs  roundtrip.rs
crates/dcsbinder-core/tests/fixtures/: README.md
crates/dcsbinder-core/tests/fixtures/A-10C II/joystick/: MFDLeft {4E50F3B0-2309-11ee-8015-444553540000}.diff.lua  MFDLeft {CD3E4960-E0D2-11ef-8014-444553540000}.diff.lua  Throttle - HOTAS Warthog {4E50F3B0-2309-11ee-8016-444553540000}.diff.lua
crates/dcsbinder-core/tests/fixtures/A-10C II/keyboard/: Keyboard.diff.lua
crates/dcsbinder-core/tests/fixtures/AH-64D_BLK_II_CPG/: modifiers.lua
crates/dcsbinder-ui/: Cargo.toml  build.rs
crates/dcsbinder-ui/src/: main.rs
crates/dcsbinder-ui/ui/: main.slint
crates/dcsbinder-ui/ui/icons/: README.md
docs/: ARCHITECTURE.md  FILE_FORMAT.md  ROADMAP.md
docs/DECISIONS/: ADR-001-full_moon-parser.md  ADR-002-jsonl-history.md  ADR-003-byte-copy-over-reserialize.md  ADR-004-directinput-not-sdl2.md
