[package]
name = "dcsbinder-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library: parsing, scanning, conflict detection, remap engine, history."

[lints]
workspace = true

[dependencies]
thiserror = "2"

# M1 deps
full_moon = "1"
indexmap = "2"
regex = "1"
walkdir = "2"

# Later milestones will add:
# - device:   sdl2 (bundled)
# - conflict: similar
# - remap:    tempfile, blake3
# - history:  serde, serde_json, uuid, time
# - config:   directories, sysinfo

[dev-dependencies]
pretty_assertions = "1"
