[package]
name = "dcsbinder-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library: parsing, scanning, conflict detection, remap engine, history."

[lints]
workspace = true

[dependencies]
thiserror = "2"

# M1 deps
full_moon = "1"
indexmap = "2"
regex = "1"
walkdir = "2"

# M2 deps: see ADR-004 for why DirectInput (windows crate) instead of SDL2.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_Devices_HumanInterfaceDevice",
] }

[dependencies.directories]
version = "5"

[dependencies.sysinfo]
version = "0.32"
default-features = false
features = ["system"]

# M3 deps: safety-critical remap engine.
[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.uuid]
version = "1"
features = ["v7"]

[dependencies.time]
version = "0.3"
features = ["formatting", "macros"]

[dependencies.tempfile]
version = "3"

[dependencies.blake3]
version = "1"

# Later milestones will add:
# - conflict: similar (M5 fuzzy suggestions)

[dev-dependencies]
pretty_assertions = "1"
