[package]
name = "dcsbinder-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Slint front-end for DCSBinder."

[lints]
workspace = true

[[bin]]
name = "dcsbinder-ui"
path = "src/main.rs"

[dependencies]
dcsbinder-core = { path = "../dcsbinder-core" }
slint = { version = "=1.13", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-skia"] }
anyhow = "1"
similar = "2"
uuid = { version = "1", features = ["v7"] }
time = { version = "0.3", features = ["formatting", "macros"] }

[build-dependencies]
slint-build = "=1.13"
